CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_c16x C)

ADD_LIBRARY(${PROJECT_NAME}
    c161_irq.c
    c161_mem.c
    c161_serial.c
    c16x_cpu.c
    idecode_c16x.c
    instructions_c16x.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

