CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_cli C)

ADD_LIBRARY(${PROJECT_NAME}
    cli_i2c.c
    cliserver.c
    editor.c
    interpreter.c
    telnetd.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

