CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_float C)

ADD_LIBRARY(${PROJECT_NAME}
    softfloat32.c
    softfloat64.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

