CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_mips64 C)

ADD_LIBRARY(${PROJECT_NAME}
    mips64_cpu.c
    mips64_idecode.c
    mips64_instructions.c
    mips64_mmu.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

