CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_mos6510 C)

ADD_LIBRARY(${PROJECT_NAME}
    cpu_m6510.c
    idecode_m6510.c
    instructions_m6510.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

