CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 OLD)
ENDIF(POLICY CMP0048)

PROJECT(softgun_ppc C)

ADD_LIBRARY(${PROJECT_NAME}
    cpu_ppc.c
    idecode_ppc.c
    instructions_ppc.c
    mmu_ppc.c
    mpc5200_mm.c
    mpc5200_psc.c
    mpc8xx_dpram.c
    mpc8xx_mem.c
    mpc8xx_scc.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

