CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 OLD)
ENDIF(POLICY CMP0048)

PROJECT(softgun_printer C)

ADD_LIBRARY(${PROJECT_NAME}
    decompress.c
    dj460interp.c
    pcl3.c
    pcl3gui.c
    pjl.c
    printengine.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

