CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_sh4 C)

ADD_LIBRARY(${PROJECT_NAME}
    cpu_sh4.c
    idecode_sh4.c
    instructions_sh4.c
    mmu_sh4.c
    tmu_sh4.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/float")

