CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_controller_lh79520 C)

ADD_LIBRARY(${PROJECT_NAME} OBJECT
    lh79520_rcpc.c
    lh79520_ssp.c
    lh79520_uart.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")
