CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_controller_lpc2106 C)

ADD_LIBRARY(${PROJECT_NAME} OBJECT
    lpc2106_gpio.c
    lpc2106_i2c.c
    lpc2106_scb.c
    lpc2106_timer.c
    lpcflash.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")
