CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_controller_ns9750 C)

ADD_LIBRARY(${PROJECT_NAME} OBJECT
    ns9750_bbdma.c
    ns9750_bbus.c
    ns9750_eth.c
    ns9750_mem.c
    ns9750_pci.c
    ns9750_serial.c
    ns9750_timer.c
    ns9750_usb.c
    ns9xxx_i2c.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/busdevices")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/arm")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/devices/phy")
