CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_controller_s3c2410 C)

ADD_LIBRARY(${PROJECT_NAME} OBJECT
    s3c2410_intco.c
    s3c2410_memco.c
    s3c2410_nand.c
    s3c2410_uart.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")
