CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
IF(POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 OLD)
ENDIF(POLICY CMP0048)

PROJECT(softgun_controller_s3c2410 C)

ADD_LIBRARY(${PROJECT_NAME} OBJECT
    s3c2410_intco.c
    s3c2410_memco.c
    s3c2410_nand.c
    s3c2410_uart.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")
