CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(softgun_device_74xx C)

ADD_LIBRARY(${PROJECT_NAME} OBJECT
    74hc138.c
    74hc595.c
    )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/core")

